--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.5.0",
     "i": "^0.3.6",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.17.1",
     "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
