--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
     "@angular/localize": "~9.0.7",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "i": "^0.3.6",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.17.1",
@@ -29,13 +31,13 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.4",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/jasmine": "^3.5.11",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.53",
+    "@types/node": "^12.12.54",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
