--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "types": [ "node" ],
+    "enableIvy": false,
   }
 }
